Rename tests to reflect what they do

--- a/ConsoleApps/FunWithSpikes/FunWithNinject/FunWithNinject.csproj
+++ b/ConsoleApps/FunWithSpikes/FunWithNinject/FunWithNinject.csproj
@@ -97,13 +97,13 @@
     <Compile Include="ModulesModulesModules\Module2.cs" />
     <Compile Include="ModulesModulesModules\Tests.cs" />
     <Compile Include="ChildKernel\ChildKernelTests.cs" />
-    <Compile Include="NamedBindings\Leaf.cs" />
-    <Compile Include="NamedBindings\LevelThree.cs" />
-    <Compile Include="NamedBindings\LevelTwo.cs" />
-    <Compile Include="NamedBindings\NamedBindingsTests.cs" />
-    <Compile Include="NamedBindings\Parent.cs" />
-    <Compile Include="NamedBindings\Root.cs" />
-    <Compile Include="NamedBindings\SingleLevel.cs" />
+    <Compile Include="AncestorBindings\Leaf.cs" />
+    <Compile Include="AncestorBindings\LevelThree.cs" />
+    <Compile Include="AncestorBindings\LevelTwo.cs" />
+    <Compile Include="AncestorBindings\AncestorBindingsTests.cs" />
+    <Compile Include="AncestorBindings\Parent.cs" />
+    <Compile Include="AncestorBindings\Root.cs" />
+    <Compile Include="AncestorBindings\SingleLevel.cs" />
     <Compile Include="OpenGenerics\OpenGenericsTests.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
