--- a/ConsoleApps/FunWithSpikes/FunWithNinject/FunWithNinject.csproj
+++ b/ConsoleApps/FunWithSpikes/FunWithNinject/FunWithNinject.csproj
@@ -109,12 +109,12 @@
     <Compile Include="AncestorBindings\Root.cs" />
     <Compile Include="AncestorBindings\SingleLevel.cs" />
     <Compile Include="NamedScopes\NamedScopesTests.cs" />
-    <Compile Include="NamedScopes\NamedScopesTests.EventAggregator.cs" />
-    <Compile Include="NamedScopes\NamedScopesTests.HaveFunc.cs" />
-    <Compile Include="NamedScopes\NamedScopesTests.IEventAggregator.cs" />
-    <Compile Include="NamedScopes\NamedScopesTests.IHaveFunc.cs" />
-    <Compile Include="NamedScopes\NamedScopesTests.IRoot.cs" />
-    <Compile Include="NamedScopes\NamedScopesTests.Root.cs" />
+    <Compile Include="NamedScopes\EventAggregator.cs" />
+    <Compile Include="NamedScopes\HaveFunc.cs" />
+    <Compile Include="NamedScopes\IEventAggregator.cs" />
+    <Compile Include="NamedScopes\IHaveFunc.cs" />
+    <Compile Include="NamedScopes\IRoot.cs" />
+    <Compile Include="NamedScopes\Root.cs" />
     <Compile Include="OpenGenerics\OpenGenericsTests.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
