--- a/ConsoleApps/FunWithSpikes/FunWithNinject/packages.config
+++ b/ConsoleApps/FunWithSpikes/FunWithNinject/packages.config
@@ -4,6 +4,7 @@
   <package id="Ninject" version="3.2.2.0" targetFramework="net45" />
   <package id="Ninject.Extensions.ChildKernel" version="3.2.0.0" targetFramework="net45" />
   <package id="Ninject.Extensions.ContextPreservation" version="3.2.0.0" targetFramework="net45" />
+  <package id="Ninject.Extensions.Conventions" version="3.2.0.0" targetFramework="net45" />
   <package id="Ninject.Extensions.Factory" version="3.2.1.0" targetFramework="net45" />
   <package id="Ninject.Extensions.Interception" version="3.2.0.0" targetFramework="net45" />
   <package id="Ninject.Extensions.Interception.DynamicProxy" version="3.2.0.0" targetFramework="net45" />
