Ignore ingorable items

--- a/.gitignore
+++ b/.gitignore
@@ -189,3 +189,4 @@ FakesAssemblies/
 /XamarinSpikes/DroidSpike/Components
 /AndroidFont/packages
 /ConsoleApps/FunWithSpikes/FunWithNuget/*.nupkg
+/ConsoleApps/FunWithSpikes/.vs/FunWithSpikes/v15
