Spike out possible query api

--- a/ConsoleApps/FunWithSpikes/FunWithSpikes/FunWithSpikes.csproj
+++ b/ConsoleApps/FunWithSpikes/FunWithSpikes/FunWithSpikes.csproj
@@ -59,6 +59,18 @@
     <Compile Include="FunWithTasks.cs" />
     <Compile Include="IHaveValue.cs" />
     <Compile Include="LinqTests.cs" />
+    <Compile Include="PardonTheExpression\Database.cs" />
+    <Compile Include="PardonTheExpression\IDatabase.cs" />
+    <Compile Include="PardonTheExpression\IWhere.cs" />
+    <Compile Include="PardonTheExpression\Model\Book.cs" />
+    <Compile Include="PardonTheExpression\Model\Genre.cs" />
+    <Compile Include="PardonTheExpression\Model\Person.cs" />
+    <Compile Include="PardonTheExpression\Query.cs" />
+    <Compile Include="PardonTheExpression\QueryExt.cs" />
+    <Compile Include="PardonTheExpression\QueryRunner.cs" />
+    <Compile Include="PardonTheExpression\Where.cs" />
+    <Compile Include="PardonTheExpression\Formatter.cs" />
+    <Compile Include="PardonTheExpression\WhereOperator.cs" />
     <Compile Include="Permuations.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
