--- a/ConsoleApps/FunWithSpikes/FunWithNinject/packages.config
+++ b/ConsoleApps/FunWithSpikes/FunWithNinject/packages.config
@@ -9,5 +9,6 @@
   <package id="Ninject.Extensions.Interception" version="3.2.0.0" targetFramework="net45" />
   <package id="Ninject.Extensions.Interception.DynamicProxy" version="3.2.0.0" targetFramework="net45" />
   <package id="Ninject.Extensions.NamedScope" version="3.2.0.0" targetFramework="net45" />
-  <package id="NUnit" version="2.6.4" targetFramework="net45" />
+  <package id="NUnit" version="3.9.0" targetFramework="net45" />
+  <package id="NUnit3TestAdapter" version="3.9.0" targetFramework="net45" />
 </packages>
