--- a/ConsoleApps/FunWithSpikes/FunWithNinject/FunWithNinject.csproj
+++ b/ConsoleApps/FunWithSpikes/FunWithNinject/FunWithNinject.csproj
@@ -97,8 +97,12 @@
     <Compile Include="InjectingSequences\SequenceInjectionTests.cs" />
     <Compile Include="InjectionTests.cs" />
     <Compile Include="Interception\ClassLevelCacheInterceptor\CacheInterceptorTests.cs" />
+    <Compile Include="Interception\ClassLevelCacheInterceptor\CacheInterfaceAttribute.cs" />
+    <Compile Include="Interception\ClassLevelCacheInterceptor\CacheInterface_NotAppliedAttribute.cs" />
     <Compile Include="Interception\ClassLevelCacheInterceptor\DataSource.cs" />
     <Compile Include="Interception\ClassLevelCacheInterceptor\IDataSource.cs" />
+    <Compile Include="Interception\ClassLevelCacheInterceptor\InterceptionConfigurtionTests.cs" />
+    <Compile Include="Interception\ClassLevelCacheInterceptor\PassThroughInterceptor.cs" />
     <Compile Include="Interception\ClassLevelCacheInterceptor\SimpleCache.cs" />
     <Compile Include="Interception\NonVirtualFoo.cs" />
     <Compile Include="Interception\OverrideReturnInterceptor.cs" />
