--- a/ConsoleApps/FunWithSpikes/FunWithCastles/FunWithCastles.csproj
+++ b/ConsoleApps/FunWithSpikes/FunWithCastles/FunWithCastles.csproj
@@ -61,11 +61,12 @@
     <Compile Include="FieldNames.cs" />
     <Compile Include="IAppSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Settings\Adapters\RegistryAdapter.cs" />
     <Compile Include="Settings\Env.cs" />
-    <Compile Include="Settings\EnvironmentVariableAdapter.cs" />
+    <Compile Include="Settings\Adapters\EnvironmentVariableAdapter.cs" />
     <Compile Include="Settings\ISettingsAdapter.cs" />
-    <Compile Include="Settings\MemoryAdapter.cs" />
-    <Compile Include="Settings\MemoryAdapterSettingsBuilderExt.cs" />
+    <Compile Include="Settings\Adapters\MemoryAdapter.cs" />
+    <Compile Include="Settings\Adapters\MemoryAdapterSettingsBuilderExt.cs" />
     <Compile Include="Settings\SettingsBuilder.cs" />
     <Compile Include="Settings\SettingsBuilderTests.cs" />
     <Compile Include="Settings\SettingsInterceptor.cs" />
