--- a/ConsoleApps/FunWithSpikes/FunWithCastles/FunWithCastles.csproj
+++ b/ConsoleApps/FunWithSpikes/FunWithCastles/FunWithCastles.csproj
@@ -61,9 +61,14 @@
     <Compile Include="FieldNames.cs" />
     <Compile Include="IAppSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Settings\Adapters\CommandLineAdapter.cs" />
+    <Compile Include="Settings\Loaders\CommandLineLoader.cs" />
     <Compile Include="Settings\Adapters\EnvironmentVariablSettingsBuilderExt.cs" />
+    <Compile Include="Settings\Loaders\CommandLineSettingsBuilderExt.cs" />
+    <Compile Include="Settings\Loaders\DictionaryLoader.cs" />
+    <Compile Include="Settings\Loaders\DictionaryLoaderSettingsBuilderExt.cs" />
+    <Compile Include="Settings\Loaders\ISettingsLoader.cs" />
     <Compile Include="Settings\Adapters\MemorySettingsBuilderExt.cs" />
+    <Compile Include="Settings\Loaders\ObjectLoader.cs" />
     <Compile Include="Settings\Adapters\ReadOnlyAdapter.cs" />
     <Compile Include="Settings\Adapters\RegistryAdapter.cs" />
     <Compile Include="Settings\Adapters\RegistrySettingsBuilderExt.cs" />
@@ -74,6 +79,7 @@
     <Compile Include="Settings\Adapters\MemoryAdapter.cs" />
     <Compile Include="Settings\ITestSettings.cs" />
     <Compile Include="Settings\LinqExt.cs" />
+    <Compile Include="Settings\Loaders\ObjectLoaderSettingsBuilderExt.cs" />
     <Compile Include="Settings\ReflectionExt.cs" />
     <Compile Include="Settings\SettingsBuilder.cs" />
     <Compile Include="Settings\SettingsBuilderTests.cs" />
