--- a/ConsoleApps/FunWithSpikes/FunWithCastles/FunWithCastles.csproj
+++ b/ConsoleApps/FunWithSpikes/FunWithCastles/FunWithCastles.csproj
@@ -61,13 +61,17 @@
     <Compile Include="FieldNames.cs" />
     <Compile Include="IAppSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Settings\ISettingsBuilder.cs" />
     <Compile Include="Settings\Loaders\CommandLineLoader.cs" />
     <Compile Include="Settings\Adapters\EnvironmentVariablSettingsBuilderExt.cs" />
     <Compile Include="Settings\Loaders\CommandLineSettingsBuilderExt.cs" />
     <Compile Include="Settings\Loaders\DictionaryLoader.cs" />
     <Compile Include="Settings\Loaders\DictionaryLoaderSettingsBuilderExt.cs" />
-    <Compile Include="Settings\Loaders\ISettingsLoader.cs" />
+    <Compile Include="Settings\Loaders\ExpressionLoader.cs" />
+    <Compile Include="Settings\ISettingsLoader.cs" />
     <Compile Include="Settings\Adapters\MemorySettingsBuilderExt.cs" />
+    <Compile Include="Settings\Loaders\ExpressionLoaderSettingsBuilder.cs" />
+    <Compile Include="Settings\Loaders\ExpressionLoaderSettingsBuilderExt.cs" />
     <Compile Include="Settings\Loaders\ObjectLoader.cs" />
     <Compile Include="Settings\Adapters\ReadOnlyAdapter.cs" />
     <Compile Include="Settings\Adapters\RegistryAdapter.cs" />
