--- a/ConsoleApps/FunWithSpikes/FunWithMoq/packages.config
+++ b/ConsoleApps/FunWithSpikes/FunWithMoq/packages.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Moq" version="4.2.1507.0118" targetFramework="net452" />
-  <package id="NUnit" version="2.6.4" targetFramework="net452" />
+  <package id="Castle.Core" version="4.2.1" targetFramework="net452" />
+  <package id="Moq" version="4.8.1" targetFramework="net452" />
+  <package id="NUnit" version="3.9.0" targetFramework="net452" />
+  <package id="NUnit3TestAdapter" version="3.9.0" targetFramework="net452" />
+  <package id="System.Threading.Tasks.Extensions" version="4.4.0" targetFramework="net452" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net452" />
 </packages>
