--- a/ConsoleApps/FunWithSpikes/FunWithCommandLine/packages.config
+++ b/ConsoleApps/FunWithSpikes/FunWithCommandLine/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="CommandLineParser" version="1.9.71" targetFramework="net461" />
   <package id="NUnit" version="3.9.0" targetFramework="net461" />
+  <package id="NUnit3TestAdapter" version="3.9.0" targetFramework="net461" />
 </packages>
