--- a/ConsoleApps/FunWithSpikes/FunWithCastles/FunWithCastles.csproj
+++ b/ConsoleApps/FunWithSpikes/FunWithCastles/FunWithCastles.csproj
@@ -59,6 +59,7 @@
     <Compile Include="DumbInterceptor.cs" />
     <Compile Include="DumbInterceptorTests.cs" />
     <Compile Include="FieldNames.cs" />
+    <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="IAppSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings\ISettingsBuilder.cs" />
