--- a/ConsoleApps/FunWithSpikes/FunWithCastles/FunWithCastles.csproj
+++ b/ConsoleApps/FunWithSpikes/FunWithCastles/FunWithCastles.csproj
@@ -47,6 +47,9 @@
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.ValueTuple, Version=4.0.2.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.ValueTuple.4.4.0\lib\net461\System.ValueTuple.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -78,6 +81,7 @@
     <Compile Include="Settings\Adapters\ReadOnlyAdapter.cs" />
     <Compile Include="Settings\Adapters\RegistryAdapter.cs" />
     <Compile Include="Settings\Adapters\RegistrySettingsBuilderExt.cs" />
+    <Compile Include="Settings\SettingsReaderWriter.cs" />
     <Compile Include="Settings\Tests\DefaultTestSettings.cs" />
     <Compile Include="Settings\Tests\EnvironmentVariableAdapterTests.cs" />
     <Compile Include="Settings\Utils\Env.cs" />
