--- a/ConsoleApps/FunWithSpikes/FunWithCastles/packages.config
+++ b/ConsoleApps/FunWithSpikes/FunWithCastles/packages.config
@@ -3,4 +3,5 @@
   <package id="Castle.Core" version="4.2.1" targetFramework="net461" />
   <package id="NUnit" version="3.9.0" targetFramework="net461" />
   <package id="NUnit3TestAdapter" version="3.9.0" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net461" />
 </packages>
