Add test to verify deserialization of nulls

--- a/ConsoleApps/FunWithSpikes/FunWithNewtonsoft/FunWithNewtonsoft.csproj
+++ b/ConsoleApps/FunWithSpikes/FunWithNewtonsoft/FunWithNewtonsoft.csproj
@@ -57,6 +57,7 @@
   <ItemGroup>
     <Compile Include="Data.cs" />
     <Compile Include="ListTests.cs" />
+    <Compile Include="NullTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
